add --files and --urls